[gd_scene load_steps=18 format=2]

[ext_resource path="res://Dinos/Test.png" type="Texture" id=1]
[ext_resource path="res://Dinos/Dino.gd" type="Script" id=2]
[ext_resource path="res://UI/DebugFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Dinos/ThoughtBubble.png" type="Texture" id=4]
[ext_resource path="res://Dinos/Particles.png" type="Texture" id=5]

[sub_resource type="CanvasItemMaterial" id=2]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.561538, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.847059, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
max_value = 2.0
_data = [ Vector2( 0, 0.381818 ), 0.0, 0.0, 0, 0, Vector2( 1, 1.26818 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=1]
flag_disable_z = true
direction = Vector3( 1, -1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )
anim_offset = 1.0

[sub_resource type="CanvasItemMaterial" id=7]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.223077, 0.846154, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.856209, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 2
emission_box_extents = Vector3( 20, 15, 1 )
flag_disable_z = true
direction = Vector3( 0, -90, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 12 )
color_ramp = SubResource( 10 )

[node name="Dino" type="Node2D"]
script = ExtResource( 2 )

[node name="DebugLabel" type="Label" parent="."]
margin_left = -131.082
margin_top = -141.824
margin_right = 362.918
margin_bottom = -83.8239
custom_fonts/font = ExtResource( 3 )
text = "State: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reactions" type="Node2D" parent="."]
position = Vector2( -66.7462, -37.6109 )

[node name="ThoughtBubble" type="Sprite" parent="Reactions"]
position = Vector2( 17.1349, -94.214 )
scale = Vector2( 8, 8 )
texture = ExtResource( 4 )
hframes = 7

[node name="Z" type="Particles2D" parent="Reactions"]
material = SubResource( 2 )
scale = Vector2( 4, 4 )
emitting = false
amount = 2
lifetime = 5.0
process_material = SubResource( 1 )
texture = ExtResource( 5 )

[node name="Heart" type="Particles2D" parent="Reactions"]
material = SubResource( 7 )
position = Vector2( 0.313866, -38.5752 )
scale = Vector2( 4, 4 )
emitting = false
amount = 3
lifetime = 3.0
process_material = SubResource( 8 )
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 8, 8 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( -16, -32 )
hframes = 3

[node name="Position2D" type="Position2D" parent="Sprite"]
position = Vector2( -8.25892, -4.95535 )

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
